last users route & swagger messages update
